--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="author" content="Kholilul Rachman N.M - Dicoding Indonesia">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HausBosque Minum Enak</title>
 </head>
